Fix z-index for selected convo

--- a/www/css/operator.css
+++ b/www/css/operator.css
@@ -412,7 +412,7 @@
     text-shadow: 0 -1px 2px #0F529B;
     margin-right: -20px;
     position: relative;
-    z-index: 100;
+    z-index: 11;
     border-radius: 5px 0 0 0;
     margin-left: -12px;
 }
